--- a/requirements.yml
+++ b/requirements.yml
@@ -12,8 +12,9 @@ non-functional:
   - Важно, чтобы сайт мог обрабатывать большое количество трафика
   - Сайт должен быть доступен на различных устройствах
 implicit:
-  - Платежная система должна выдерживать одновременно много запросов в секунду».
+  - Платежная система должна выдерживать одновременно много запросов в секунду
+  - Должна быть возможность работы функционала сайта на русском и английйском языках
   - Стоимость должна быть в рублях при переключении на русский язык
   - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара
-  - При добавлении товара в корзину должен изменяться остаток товара в магазин
+  - При добавлении товара в корзину должен изменяться остаток товара в магазине
   - Должна быть регистрация пользователя на сайте для оформления заказа
