--- a/requirements.yml
+++ b/requirements.yml
@@ -13,7 +13,7 @@ non-functional:
   - Сайт должен быть доступен на различных устройствах
 implicit:
   - Платежная система должна выдерживать одновременно много запросов в секунду
-  - Должна быть возможность работы функционала сайта на русском и английйском языках
+  - Сайт должен функцонировать на русском и английйском языках
   - Стоимость должна быть в рублях при переключении на русский язык
   - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара
   - При добавлении товара в корзину должен изменяться остаток товара в магазине
