--- a/requirements.yml
+++ b/requirements.yml
@@ -15,6 +15,6 @@ implicit:
   - Платежная система должна выдерживать одновременно много запросов в секунду
   - Сайт должен функцонировать на русском и английйском языках
   - Стоимость должна быть в рублях при переключении на русский язык
-  - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара
+  - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара и его полное аудаление 
   - При добавлении товара в корзину должен изменяться остаток товара в магазине
   - Должна быть регистрация пользователя на сайте для оформления заказа
