--- a/requirements.yml
+++ b/requirements.yml
@@ -18,3 +18,4 @@ implicit:
   - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара и его полное удаление 
   - При добавлении товара в корзину должен изменяться остаток товара в магазине
   - Должна быть регистрация пользователя на сайте для оформления заказа
+  - Должна быть добавлена форма обратной связи от клиента 
