--- a/test-cases.yml
+++ b/test-cases.yml
@@ -78,3 +78,61 @@
   - на выбранных товарах нажать кнопку "add to cart" 
   expected-result: |
     В корзину добавятся товары в необходимом количестве, над словом "cart"  в панели появится кол-во добавленного товара
+
+- summary: |
+    Проверка возможности удааления товара из корзины
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  prerequisites: |
+    открыта корзина пользователя, добалены товары в корзину 
+  test-data: 
+    удалить из корзины Red Lipstick кол-во 1 шт    
+  steps:
+  - в корзине напротив товара Red Lipstick нажать кнопку  "Delete" 
+  expected-result: |
+   Из корзины удалится товар Red Lipstick
+
+- summary: |
+    Проверка возможности уменьшения товара в корзине
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  prerequisites: |
+    открыта корзина пользователя, добалены товары в корзину 
+  test-data: 
+    изменить в корзины товар Red Lipstick с 3 шт на 1 шт
+  steps:
+  - в корзине напротив товара Red Lipstick нажать кнопку  "Delete" 
+  expected-result: |
+   В корзине меняется количество товара Red Lipstick
+
+- summary: |
+    Проверка возможности добавления товара в корзине
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  prerequisites: |
+    открыта корзина пользователя, добалены товары в корзину 
+  test-data: 
+    изменить в корзины товар Red Lipstick с 1 шт на 2 шт
+  steps:
+  - нажать кнопку "Store"
+  - добавляю товар Red Lipstick в корзину, нажатие кнопки "add to cart"
+  expected-result: |
+   В корзине меняется количество товара Red Lipstick с 1 шт на 2 шт
+   
+- summary: |
+    Проверка адаптивности сайта
+  requirement: |
+    Сайт должен быть доступен на различных устройствах
+  prerequisites: |
+    Проверка адаптивности сайта на устройствах Iphone, Android, Ipad. Открыта страница сайта
+  test-data: 
+    корректное отображение на устройстве
+  steps:
+  - открыть Devtools
+  - нажать кнопку Toogle device toolbar
+  - выбрать устройство Iphone 12 Pro, Android, Ipad в левом верхнем углу панели 
+  - проверить как отображаются все страницы сайта
+  expected-result: |
+   Все страницы сайта отображаются корректно на всех устройствах
+   
+
