--- a/test-cases.yml
+++ b/test-cases.yml
@@ -134,5 +134,67 @@
   - проверить как отображаются все страницы сайта
   expected-result: |
    Все страницы сайта отображаются корректно на всех устройствах
+
+- summary: |
+    Проверка скоости загрузки страницы сайта
+  requirement: |
+    Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
+  prerequisites: |
+    Открыта страница сайта
+  test-data: 
+    проверить скорость загрузки при низкой, средней и высокой скорости интернета
+  steps:
+  - открыть Devtools
+  - выбрать вкладку Network 
+  - выбрать скорость интернета 3G, slow 4G, no throttling
+  - обновить страницу
+  expected-result: |
+   При загрузке страницы сначала отображается текст до закгрузки изображений
+
+- summary: |
+    Проверка кроссбраузерности сайта
+  requirement: |
+    Сайт должен быть доступен и корректно отображаться в различных браузерах
+  prerequisites: |
+    Наличие различных браузеров. Открыта страница сайта
+  test-data:  
+    Проверка кроссбраузерности сайта в браузерах Chrome, Mozilla, Opera, Edge, Safari.
+  steps:
+  - проверить как отображаются все страницы сайта в браузерах Chrome, Mozilla, Opera, Edge, Safari
+  expected-result: |
+   Все страницы сайта отображаются корректно во всех браузерах
+
+- summary: |
+   Проверка Мультиязычности сайта
+  requirement: |
+    Сайт нужно разработать с учетом удобства использования 
+  prerequisites: |
+    Открыта страница магазина, выбран английсикй язык
+  test-data: |
+    При переключении языков вся основная информация отображается на выбранном языке
+  steps:
+    - нажимаем "Language" в шапке сайта
+    - Выбираем язык "Russian" из выпадающего меню
+  expected-result: |
+    Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
+
+- summary: |
+   Проверка Мультиязычности сайта
+  requirement: |
+    Сайт нужно разработать с учетом удобства использования 
+  prerequisites: |
+    Открыта страница магазина, выбран английсикй язык
+  test-data: |
+    При переключении языков вся основная информация отображается на выбранном языке
+  steps:
+    - нажимаем "Language" в шапке сайта
+    - Выбираем язык "Russian" из выпадающего меню
+  expected-result: |
+    Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
+
+
+   
+
+   
    
 
