--- a/testing-report.yml
+++ b/testing-report.yml
@@ -27,7 +27,7 @@
     Проверка возможности удааления товара из корзины
   status: pass  
 
-  summary: |
+- summary: |
     Проверка возможности уменьшения товара в корзине
   status: pass    
 
@@ -46,7 +46,3 @@
 - summary: |
    Проверка Мультиязычности сайта
   status: pass 
-
-  
-  
-  
