--- a/test-cases.yml
+++ b/test-cases.yml
@@ -177,3 +177,20 @@
     - Выбираем язык "Russian" из выпадающего меню
   expected-result: |
     Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
+
+- summary: |
+    Проверка успешной регистрации пользователя
+  requirement: |
+    Должна быть регистрация пользователя на сайте для оформления заказа
+  prerequisites: |
+    открыта страница с товарами, язык сайта английский
+  test-data: |
+    Зарегистрироваться на сайте
+  steps:
+    - пройти на страницу регистрации
+    - в поле "Login" ввести логин 
+    - в поле email ввести почту
+    - в поле "Password" ввести пароль
+    - в поле "Confirm password" ввести подтверждение пароля
+  expected-result: |
+    Появиться информационное окно об успешной регистрации и переход на главную страницу сайта
