--- a/testing-report.yml
+++ b/testing-report.yml
@@ -46,3 +46,7 @@
 - summary: |
    Проверка Мультиязычности сайта
   status: pass 
+
+- summary: |
+    Проверка успешной регистрации пользователя
+  status: fail
