--- a/testing-report.yml
+++ b/testing-report.yml
@@ -9,7 +9,7 @@
 
 - summary: |
     Проверка поиска товара через выбор категории 
-  status: fail
+  status: pass
 
 - summary: |
     Проверка поиска товаров через фильтр
@@ -24,7 +24,7 @@
   status: pass  
 
 - summary: |
-    Проверка возможности удааления товара из корзины
+    Проверка возможности удаления товара из корзины
   status: pass  
 
 - summary: |
@@ -45,7 +45,7 @@
 
 - summary: |
    Проверка Мультиязычности сайта
-  status: pass 
+  status: fail 
 
 - summary: |
     Проверка успешной регистрации пользователя
