--- a/test-cases.yml
+++ b/test-cases.yml
@@ -80,7 +80,7 @@
     В корзину добавятся товары в необходимом количестве, над словом "cart"  в панели появится кол-во добавленного товара
 
 - summary: |
-    Проверка возможности удааления товара из корзины
+    Проверка возможности удаления товара из корзины
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
@@ -105,20 +105,6 @@
   expected-result: |
    В корзине меняется количество товара Red Lipstick
 
-- summary: |
-    Проверка возможности добавления товара в корзине
-  requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
-  prerequisites: |
-    открыта корзина пользователя, добалены товары в корзину 
-  test-data: 
-    изменить в корзины товар Red Lipstick с 1 шт на 2 шт
-  steps:
-  - нажать кнопку "Store"
-  - добавляю товар Red Lipstick в корзину, нажатие кнопки "add to cart"
-  expected-result: |
-   В корзине меняется количество товара Red Lipstick с 1 шт на 2 шт
-   
 - summary: |
     Проверка адаптивности сайта
   requirement: |
