--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,11 +1,39 @@
 ---
 - summary: |
-    Короткое описание ошибки
+    Поиск товара не работает на русском языке 
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
   steps-to-reproduce: |
-    Полный перечень шагов для воспроизведения и описание, на каком шаге произошла ошибка
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В навигационной панели выбрать русский язык
+    В строке поиска вводим "корм для кошек" 
   expected-result: |
-    Какой результат должен быть без ошибки
+    Должен отобразиться корм для кошек CAT FOOD
   actual-result: |
-    Какой результат получился на самом деле
+    Выводится информация "Ничего не найдено"
+
+- summary: |
+    На русском языке название и описание товара не переводится на русский, цена остается в $ 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В навигационной панели выбрать русский язык
+  expected-result: |
+    На главной странице сайта должен отображаться перечень товаров, описание каждого из них на русском языке, цена в рублях
+  actual-result: |
+    Описание товаров осталось на английском, цена в долларах
+
+- summary: |
+    Нет возможности зарегистрировать пользователя 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+  expected-result: |
+    На главной странице сайта должно быть окно с вводом логина и пароля для входа под учеткой пользователя / регистрации
+  actual-result: |
+    Нет такого функциоанала 
