--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,1 +1,81 @@
+---
+test-cases:
+- summary: |
+    Проверка поиска товара в строке поиска
+  status: pass
 
+- summary: |
+    Проверка поиска товара в строке поиска
+  status: fail
+
+- summary: |
+    Проверка поиска товара через выбор категории 
+  status: pass
+
+- summary: |
+    Проверка поиска товаров через фильтр
+  status: pass
+
+- summary: |
+    Проверка возможности просмотра информации о товаре
+  status: pass
+
+- summary: |
+    Проверка возможности добавления товара в корзину
+  status: pass  
+
+- summary: |
+    Проверка возможности удаления товара из корзины
+  status: pass  
+
+- summary: |
+    Проверка возможности уменьшения товара в корзине
+  status: pass    
+
+- summary: |
+    Проверка адаптивности сайта
+  status: pass 
+
+- summary: |
+    Проверка скоости загрузки страницы сайта
+  status: pass 
+
+- summary: |
+    Проверка кроссбраузерности сайта
+  status: pass 
+
+- summary: |
+   Проверка Мультиязычности сайта
+  status: fail 
+
+- summary: |
+    Проверка успешной регистрации пользователя
+  status: pass
+  
+bugreports:
+- summary: |
+    Поиск товара не работает на русском языке 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В навигационной панели выбрать русский язык
+    В строке поиска вводим "корм для кошек" 
+  expected-result: |
+    Должен отобразиться корм для кошек CAT FOOD
+  actual-result: |
+    Отображается главная страница
+    
+- summary: |
+    На русском языке название и описание товара не переводится на русский, цена остается в $ 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В навигационной панели выбрать русский язык
+  expected-result: |
+    На главной странице сайта должен отображаться перечень товаров, описание каждого из них на русском языке, цена в рублях
+  actual-result: |
+    Описание товаров осталось на английском, цена в долларах
