--- a/about.yml
+++ b/about.yml
@@ -1,16 +1,7 @@
 ---
-# Если хотите пояснить код, можно добавить комментарий с помощью символа #
-name: Ilona Maskova # Ваше имя
+name: Алленов Глеб
 job: QA Engineer
 level: junior
-email: ilona@hexlet.io
+email: allenovgy@gmail.com
 description: |
-  Этот текст — описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя.
-
-  Текст можно написать в несколько абзацев
-skills: # Список навыков в виде списка, можете написать сюда что-то свое
-  - Функциональное тестирование
-  - Написание багрепортов
-  - Linux
-  - Слепая печать
-  - Английский язык C1
+  менеджер по продажам более 15 лет. На текущий момент работаю в сфере лизинга. Женат, 2 детей. Занимаюсь кроссфитом, баскетболом и веду активный образ жизни
