--- a/about.yml
+++ b/about.yml
@@ -4,4 +4,6 @@ job: QA Engineer
 level: junior
 email: allenovgy@gmail.com
 description: |
-  менеджер по продажам более 15 лет. На текущий момент работаю в сфере лизинга. Женат, 2 детей. Занимаюсь кроссфитом, баскетболом и веду активный образ жизни
+  Без опыта в IT. Менеджер по продажам более 15 лет. На текущий момент работаю в сфере лизинга. 
+  Женат, 2 детей. 
+  Занимаюсь кроссфитом, баскетболом, люблю читать художественную литературу, изучать новое и докапываться до сути вещей
