--- a/about.yml
+++ b/about.yml
@@ -8,7 +8,7 @@ description: |
   Женат, 2 детей. 
   Занимаюсь кроссфитом, баскетболом, люблю читать художественную литературу, изучать новое и докапываться до сути вещей
 skills: |
-  Решение проблем
-  Принятие решений
-  Коммуникация
-  Критическое мышление
+ - Решение проблем
+ - Принятие решений
+ - Коммуникация
+ - Критическое мышление
