--- a/about.yml
+++ b/about.yml
@@ -7,8 +7,9 @@ description: |
   Без опыта в IT. Менеджер по продажам более 15 лет. На текущий момент работаю в сфере лизинга. 
   Женат, 2 детей. 
   Занимаюсь кроссфитом, баскетболом, люблю читать художественную литературу, изучать новое и докапываться до сути вещей
-skills: |
- - Решение проблем
- - Принятие решений
- - Коммуникация
- - Критическое мышление
+skills: 
+  - знание основ тестирования ПО
+  - Решение проблем
+  - Принятие решений
+  - Коммуникация
+  - Критическое мышление
