--- a/requirements.yml
+++ b/requirements.yml
@@ -4,18 +4,19 @@ functional:
   - Пользователь должен иметь возможность фильтровать товары
   - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
-non-functional:
+  - Пользователь должен иметь возможность добавлять товары в корзину и продолжать выбирать товары в каталоге
+  non-functional:
   - Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
   - Сайт должен иметь мобильную версию
   - Сайт нужно протестировать на совместимость с последними версиями браузеров
   - Важно, чтобы сайт мог обрабатывать большое количество трафика
   - Сайт должен быть доступен на различных устройствах
+  - На странице товара и в каталоге нужно выводить название, рейтинг, цена со скидкой и без нее
+  - При ч
 implicit:
-  - Платежная система должна выдерживать одновременно много запросов в секунду
   - Сайт должен функцонировать на русском и английйском языках
-  - Стоимость должна быть в рублях при переключении на русский язык
   - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара и его полное удаление 
   - При добавлении товара в корзину должен изменяться остаток товара в магазине
-  - Должна быть регистрация пользователя на сайте для оформления заказа
   - Должна быть добавлена форма обратной связи от клиента 
+  - Пользователь не должен иметь возможность редактировать описание товара
