--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,25 +1,26 @@
 ---
 - summary: |
-    Проверка поиска товара в строке поиска
+    Проверка поиска товара в строке поиска по бренду
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
-    открыта страница с товарами, язык сайта английский
+    открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
-    найти духи Dior J'adore
+     - Dior J'adore
+     - Calvin Klein
   steps:
     - Вводим в строку Search наименование товара Dior J'adore
   expected-result: |
     Пользователь должен увидеть интресующий его продукт
 
 - summary: |
-    Проверка поиска товара в строке поиска
+    Проверка поиска товара в строке поиска по общему наименованию
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
-    открыта страница с товарами, язык сайта русский
+    открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта русский
   test-data: |
-    найти корм для кошек 
+    корм для кошек 
   steps:
     - Вводим в строку Search наименование товара "корм для кошек"
   expected-result: |
@@ -30,7 +31,7 @@
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
-    открыта страница с товарами, язык сайта английский
+    открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
     найта духи Dior J'adore
   steps:
@@ -40,13 +41,13 @@
     Пользователь должен увидеть интресующий его продукт
 
 - summary: |
-    Проверка поиска товаров через фильтр
+    Проверка поиска товаров через фильтр по цене
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites: |
-    открыта страница с товарами, язык сайта английский, Выбрана категория "groceries"
+    открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский, Выбрана категория "groceries"
   test-data: |
-    Найти все товары в наличии в категории groceries с ценой от 5 до 12 $
+    from 5 to 12 
   steps:
     - В фильтре "In Stock" поставить галочку
     - в фильтре "Price" проставить значение from 5 to 12
@@ -54,26 +55,39 @@
     Пользователь должен увидеть интресующий его продукт
 
 - summary: |
+    Проверка поиска товаров через фильтр по наличию
+  requirement: |
+   Пользователь должен иметь возможность фильтровать товары по наличию
+  prerequisites: |
+    открыта страница с товарами, язык сайта английский, Выбрана категория "groceries"
+  test-data: |
+    Найти все товары в наличии в категории groceries
+  steps:
+    - В фильтре "In Stock" поставить галочку
+  expected-result: |
+    Пользователь должен увидеть товары в наличии
+
+- summary: |
     Проверка возможности просмотра информации о товаре
   requirement: |
     Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
   prerequisites: |
-    открыта страница с товарами, язык сайта английский, выбрана категория "furniture", стоит галочка "In Stock" 
+    открыта страница с товарами https://hexlet-products-store.vercel.app/
   test-data: |
-    просмотреть информацию о товаре "Knoll Saarinen Executive Conference Chair"
+    empty
   steps:
-   - Найти данный товар "Knoll Saarinen Executive Conference Chair" и нажать на него 
+   - Открыть страницу с товарами https://hexlet-products-store.vercel.app/ и нажать на товар
   expected-result: |
-    Пользователь должен увидеть интресующий его товар с описанием, фото и ценой
+    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
 
 - summary: |
     Проверка возможности добавления товара в корзину
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
-    открыта страница с товарами, язык сайта английский, в фильтре "Brand" поставлена галочка "Chic Cosmetics", В фильтре "In Stock" поставлена галочку
+    открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
-    добавить все товары брэнда Chic Cosmetics в корзину
+    empty
   steps:
   - на выбранных товарах нажать кнопку "add to cart" 
   expected-result: |
@@ -84,9 +98,9 @@
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
-    открыта корзина пользователя, добалены товары в корзину 
+    открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добалены товары в корзину 
   test-data: 
-    удалить из корзины Red Lipstick кол-во 1 шт    
+    empty
   steps:
   - в корзине напротив товара Red Lipstick нажать кнопку  "Delete" 
   expected-result: |
@@ -97,9 +111,9 @@
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
-    открыта корзина пользователя, добалены товары в корзину 
+    открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добалены товары в корзину 
   test-data: 
-    изменить в корзины товар Red Lipstick с 3 шт на 1 шт
+    from 3 to 1
   steps:
   - в корзине напротив товара Red Lipstick нажать кнопку  "Delete" 
   expected-result: |
@@ -112,7 +126,7 @@
   prerequisites: |
     Проверка адаптивности сайта на устройствах Iphone, Android, Ipad. Открыта страница сайта
   test-data: 
-    корректное отображение на устройстве
+    empty
   steps:
   - открыть Devtools
   - нажать кнопку Toogle device toolbar
@@ -126,9 +140,9 @@
   requirement: |
     Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
   prerequisites: |
-    Открыта страница сайта
+    Открыта страница сайта https://hexlet-products-store.vercel.app/
   test-data: 
-    проверить скорость загрузки при низкой, средней и высокой скорости интернета
+    empty
   steps:
   - открыть Devtools
   - выбрать вкладку Network 
@@ -142,9 +156,9 @@
   requirement: |
     Сайт должен быть доступен и корректно отображаться в различных браузерах
   prerequisites: |
-    Наличие различных браузеров. Открыта страница сайта
+    Наличие различных браузеров. Открыта страница сайта https://hexlet-products-store.vercel.app/
   test-data:  
-    Проверка кроссбраузерности сайта в браузерах Chrome, Mozilla, Opera, Edge, Safari.
+   empty
   steps:
   - проверить как отображаются все страницы сайта в браузерах Chrome, Mozilla, Opera, Edge, Safari
   expected-result: |
@@ -155,9 +169,9 @@
   requirement: |
     Сайт нужно разработать с учетом удобства использования 
   prerequisites: |
-    Открыта страница магазина, выбран английсикй язык
+    Открыта страница магазина https://hexlet-products-store.vercel.app/, выбран английсикй язык
   test-data: |
-    При переключении языков вся основная информация отображается на выбранном языке
+    empty
   steps:
     - нажимаем "Language" в шапке сайта
     - Выбираем язык "Russian" из выпадающего меню
@@ -169,9 +183,9 @@
   requirement: |
     Должна быть регистрация пользователя на сайте для оформления заказа
   prerequisites: |
-    открыта страница с товарами, язык сайта английский
+    открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
-    Зарегистрироваться на сайте
+    empty
   steps:
     - пройти на страницу регистрации
     - в поле "Login" ввести логин 
