--- a/requirements.yml
+++ b/requirements.yml
@@ -13,7 +13,7 @@ functional:
   - Важно, чтобы сайт мог обрабатывать большое количество трафика
   - Сайт должен быть доступен на различных устройствах
   - На странице товара и в каталоге нужно выводить название, рейтинг, цена со скидкой и без нее
-  - При ч
+  - Корзина пользователя должна сохраняться в текущей сессии браузера
 implicit:
   - Сайт должен функцонировать на русском и английйском языках
   - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара и его полное удаление 
