--- a/requirements.yml
+++ b/requirements.yml
@@ -15,7 +15,7 @@ functional:
   - На странице товара и в каталоге нужно выводить название, рейтинг, цена со скидкой и без нее
   - Корзина пользователя должна сохраняться в текущей сессии браузера
 implicit:
-  - Сайт должен функцонировать на русском и английйском языках
+  - Сайт должен функционировать на русском и английйском языках
   - При добавлении товара в корзину должна быть возможность указать кол-во заказываемого товара и его полное удаление 
   - При добавлении товара в корзину должен изменяться остаток товара в магазине
   - Должна быть добавлена форма обратной связи от клиента 
