--- a/test-cases.yml
+++ b/test-cases.yml
@@ -6,8 +6,8 @@
   prerequisites: |
     открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
-     - Dior J'adore
-     - Calvin Klein
+     brend = Dior J'adore
+     brend = Calvin Klein
   steps:
     - Вводим в строку Search наименование товара Dior J'adore
   expected-result: |
@@ -25,23 +25,36 @@
     - Вводим в строку Search наименование товара "корм для кошек"
   expected-result: |
     Пользователь должен увидеть интресующий его продукт
+
+- summary: |
+    Проверка фильтрации каталога товаров по категории
+  requirement: |
+    При выборе определенной категории товара, сайт отображает товары, относящиеся к выбранной категории
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/
+  test-data: |
+    empty
+  steps:
+    - Выбрать из списка категорию furniture
+  expected-result: |
+    Сайт отображает товары, относящиеся к категории furniture
     
 - summary: |
-    Проверка поиска товара через выбор категории 
+    Проверка поиска товара через выбор категории и строку поиска
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
     открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
-    найта духи Dior J'adore
+    Dior J'adore
   steps:
-    - Выбрать категорию "fragrances"
+    - Выбрать категорию "fragrances" 
     - Найти на странице духи Dior J'adore
   expected-result: |
     Пользователь должен увидеть интресующий его продукт
 
 - summary: |
-    Проверка поиска товаров через фильтр по цене
+   Проверка поиска товаров через фильтр по цене
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites: |
@@ -52,10 +65,10 @@
     - В фильтре "In Stock" поставить галочку
     - в фильтре "Price" проставить значение from 5 to 12
   expected-result: |
-    Пользователь должен увидеть интресующий его продукт
+    Пользователь должен увидеть товары, которые относятся к данному диапазоны цены
 
 - summary: |
-    Проверка поиска товаров через фильтр по наличию
+   Проверка поиска товаров через фильтр по наличию
   requirement: |
    Пользователь должен иметь возможность фильтровать товары по наличию
   prerequisites: |
@@ -68,6 +81,36 @@
     Пользователь должен увидеть товары в наличии
 
 - summary: |
+    Проверка фильтрации по бренду
+  requirement: |
+    При выборе определенного бреда товара, сайт отображает товары, только относящиеся к указанному бренду
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/
+    Товар с указанными параметрами имеется в наличии
+  test-data: |
+    Brend = Dior
+  steps:
+    - Установить флажок "Dior"
+  expected-result: |
+    Сайт отображает товары, относящиеся к бренду "Dior"
+
+- summary: |
+    Проверка фильтрации по нескольким брендам
+  requirement: |
+    При выборе нескольких брендов, сайт отображает товары, относящиеся к указанным брендам
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/
+    Товары с указанными параметрами имеются в наличии
+  test-data: |
+    Brend = Dior
+    Brend = Gucci
+  steps:
+    - Установить флажок "Dior"
+    - Установить флажок "Gucci"
+  expected-result: |
+    Сайт отображает товары, относящиеся к брендам "Dior" и "Gucci"
+
+- summary: |
     Проверка возможности просмотра информации о товаре
   requirement: |
     Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
@@ -78,12 +121,12 @@
   steps:
    - Открыть страницу с товарами https://hexlet-products-store.vercel.app/ и нажать на товар
   expected-result: |
-    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
+    Отображается карточка товара с подробным описанием товара
 
 - summary: |
-    Проверка возможности добавления товара в корзину
+    Проверка возможности добавления товара в корзину с каталога
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+    Пользователь должен иметь возможность добавлять товары в корзину с каталога товаров (не проваливаясь в карточку товара) и просматривать содержимое корзины
   prerequisites: |
     открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
@@ -94,22 +137,22 @@
     В корзину добавятся товары в необходимом количестве, над словом "cart"  в панели появится кол-во добавленного товара
 
 - summary: |
-    Проверка возможности удаления товара из корзины
+    Проверка возможности добавления товара в корзину с карточки товара
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+    Пользователь должен иметь возможность добавлять товары в корзину находясь в карточке товара и просматривать содержимое корзины
   prerequisites: |
-    открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добалены товары в корзину 
-  test-data: 
+    открыта страница с товарами https://hexlet-products-store.vercel.app/products/5, язык сайта английский
+  test-data: |
     empty
   steps:
-  - в корзине напротив товара Red Lipstick нажать кнопку  "Delete" 
+  - в выбранной карточке товарах нажать кнопку "add to cart" 
   expected-result: |
-   Из корзины удалится товар Red Lipstick
+    В корзину добавятся товары в необходимом количестве, над словом "cart"  в панели появится кол-во добавленного товара
 
 - summary: |
     Проверка возможности уменьшения товара в корзине
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+    Пользователь должен иметь возможность добавлять товары в корзину, изменять количество содержимого корзины и просматривать содержимое корзины
   prerequisites: |
     открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добалены товары в корзину 
   test-data: 
@@ -118,6 +161,77 @@
   - в корзине напротив товара Red Lipstick нажать кнопку  "Delete" 
   expected-result: |
    В корзине меняется количество товара Red Lipstick
+
+- summary: |
+    Проверка возможности добавления одинаковых товаров в корзину
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину, изменять количество содержимого корзины и просматривать содержимое корзины
+  prerequisites: |
+    открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добален товар в корзину 
+  test-data: 
+    from 0 to 3
+  steps:
+  - на странице с товарами нажать "add to cart" три раза у выбранного товара
+  expected-result: |
+   товар добавляется в корзину и меняется количество товара
+
+- summary: |
+    Проверка возможности добавления разных товаров в корзину
+  requirement: |
+    Пользователь должен иметь возможность добавлять товары в корзину, изменять количество содержимого корзины и просматривать содержимое корзины
+  prerequisites: |
+    открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добалены товары в корзину 
+  test-data: 
+    empty
+  steps:
+  - в корзине напротив товаров нажать "add to cart"
+  expected-result: |
+   В корзине появятся выбранные товары
+
+- summary: |
+    Проверка отчистки определенного товара из корзины 
+  requirement: |
+    При добавлении товара в корзину, имеется возможность удалить товар из корзины 
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/
+    Товар = Dior
+    Товар = Gucci
+  steps:
+    - Add to cart Dior
+    - Add to cart Gucci
+    - Перейти в корзину 
+    - В строке "Gucci"  нажать "delite"   
+  expected-result: |
+    В корзине остался товар Dior 
+  
+- summary: |
+    Проверка отчистки всего списка корзины 
+  requirement: |
+    При добавлении нескольких товаров, имеется возможность удалить весь список товаров из корзины одним нажатием
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/
+  test-data: |
+    empty
+  steps:
+    - Добавить любых 5 товаров в корзину
+    - Перейти в корзину 
+    - Нажать "Clear cart"
+  expected-result: |
+    После нажатия "Clear cart" все товары из корзины удалены
+
+- summary: |
+    Проверка возврата из корзины в каталог магазина
+  requirement: |
+    При переходе в корзину, имеется возможность вернуться на главную страницу магазина
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/cart
+  test-data: |
+    empty
+  steps:
+    - Перейти в корзину
+    - Нажать "Continue shopping" 
+  expected-result: |
+    После нажатия "Continue shopping" отображается главная страница магазина 
 
 - summary: |
     Проверка адаптивности сайта
@@ -136,7 +250,7 @@
    Все страницы сайта отображаются корректно на всех устройствах
 
 - summary: |
-    Проверка скоости загрузки страницы сайта
+    Проверка скорости загрузки страницы сайта
   requirement: |
     Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
   prerequisites: |
@@ -165,7 +279,7 @@
    Все страницы сайта отображаются корректно во всех браузерах
 
 - summary: |
-   Проверка Мультиязычности сайта
+   Проверка Мультиязычности сайта. Отображение на русском языке
   requirement: |
     Сайт нужно разработать с учетом удобства использования 
   prerequisites: |
@@ -179,18 +293,15 @@
     Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
 
 - summary: |
-    Проверка успешной регистрации пользователя
+   Проверка Мультиязычности сайта. Отображение на английском языке
   requirement: |
-    Должна быть регистрация пользователя на сайте для оформления заказа
+    Сайт нужно разработать с учетом удобства использования 
   prerequisites: |
-    открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
+    Открыта страница магазина https://hexlet-products-store.vercel.app/, выбран русский язык
   test-data: |
     empty
   steps:
-    - пройти на страницу регистрации
-    - в поле "Login" ввести логин 
-    - в поле email ввести почту
-    - в поле "Password" ввести пароль
-    - в поле "Confirm password" ввести подтверждение пароля
+    - нажимаем "Language" в шапке сайта
+    - Выбираем язык "English" из выпадающего меню
   expected-result: |
-    Появиться информационное окно об успешной регистрации и переход на главную страницу сайта
+    Интерфейс и элементы сайта отображаются корректно на английском языке, а также название и описание в карточках товаров
