--- a/test-cases.yml
+++ b/test-cases.yml
@@ -234,6 +234,22 @@
     После нажатия "Continue shopping" отображается главная страница магазина 
 
 - summary: |
+    Проверка успешного оформления заказа 
+  requirement: |
+    При добавлении товара в корзину, имеется возможность оформления заказа
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/cart
+  test-data: |
+    Товар = Dior
+  steps:
+    - В строке Search ввести "Dior"
+    - В карточке товара нажать "Add to cart"
+    - Открыть корзину
+    - Нажать кнопку "checkout"
+  expected-result: |
+    Отображается всплывающее окно об успешном оформлении заказа "Order placed successfully" с информацией о сделанном заказе
+
+- summary: |
     Проверка адаптивности сайта
   requirement: |
     Сайт должен быть доступен на различных устройствах
